<resources>
    <string name="app_name">TeamProject_1</string>
    <string name="autotv01">AutoCompleteTextView</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="시간표">시간표</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>